--- a/1.html
+++ b/1.html
@@ -11,10 +11,10 @@
 <body>
     <h1>To Do List</h1>
     <div class="container">
-        <input id="inputField" type="text"><button id="addToDo">+</button>
+        <input id="fata fild" type="text"><button id="addToDo">+</button>
         <div class="to-dos" id="toDoContainer">
         </div>
     </div>
-    <script src="main.css"></script>
+    <style.css"></script>
 </body>
 </html>
