--- a/1.html
+++ b/1.html
@@ -12,8 +12,9 @@
     <h1>To Do List</h1>
     <div class="container">
         <input id="fata fild" type="text"><button id="addToDo">+</button>
-        <div class="to-dos" id="toDoContainer">
-        </div>
+       priya
+       neha
+       rahul
     </div>
     <style.css"></script>
 </body>
