--- a/1.html
+++ b/1.html
@@ -4,18 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel=js
-    <title>To working office
-        list won
-    </title>
-</head>
-<body>
-    <h1>To Do List</h1>
-    <div class="container">
-        <input id="fata fild" type="text"><button id="addToDo">+</button>
-       priya
-       neha
-       rahul
-    </div>
-    <style.css"></script>
-</body>
-</html>
+    <caption> puscfdf
+        le us working
+    </caption>
+   
+        Validate that variables exist
+        if(toggle && nav){
+            toggle.addEventListener('click', ()=>{
+                // We add the show-menu class to the div tag with the nav__menu class
+                nav.classList.toggle('show-menu')
+            })
+        }
+    }
+    s      crossOriginIsolated
+   
+})
+})
+font-size: 25px;
+vertical-align: middle;
+}
+
+#addToDo {
+color: beige;
+background-repeat: repeat-y; 
+vareedfe
+#inputField {
+grid-row: span
+calc()
+AudioListener
+locationbar
